# chess_ai

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  constants.py  docker-compose.yml  engine.py  main.py  open_cv.py  pyproject.toml  server.py  template.env
extensions/chrome/: background.js  hello.html  manifest.json
schemas/: schemas.py
settings/: __init__.py  base.py
